--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,6 +35,20 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            // 自定义APK名称
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "智能健康监测-${variant.name}-${variant.versionName}.apk"
+                }
+            }
+        }
+        debug {
+            // 自定义APK名称
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    outputFileName = "智能健康监测-${variant.name}-${variant.versionName}.apk"
+                }
+            }
         }
     }
 }
